# python-datadis

./: .flake8  .gitignore  README.md  openapi-spec.yaml  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  setup.cfg
.github/workflows/: build_and_publish_package.yaml  lint_and_test_package.yaml
datadis_client/: __init__.py  consumption.py  search.py  supplies.py
examples/: basic_usage.py
tests/: test_integration.py
